# Lesson28_HW

./: manage.py  pyproject.toml
Lesson28_HW/: asgi.py  settings.py  urls.py  wsgi.py
ads/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_admodel_options_alter_categorymodel_options_and_more.py  0003_alter_admodel_category_alter_admodel_image.py
tests/: factories.py  fixtures.py
tests/ads/: ads_create_test.py  ads_detail_test.py  ads_list_test.py
tests/selections/: selection_create_test.py
users/: models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_alter_location_options_alter_location_lat_and_more.py
